--- a/equipment.html
+++ b/equipment.html
@@ -123,6 +123,7 @@
                 <li><a href="project.html">Project list</a></li>
               </ul>
             </li>
+            <li><a href="index.html#legal">LEGALITY</a></li>
             <li><a href="#contact-us">CONTACT US</a></li>
           </ul>
         </div>
@@ -165,7 +166,6 @@
         </div>
       </div>
     </nav>
-
     <!-- Ahir navbar -->
 
     <!-- hero section -->
@@ -658,6 +658,7 @@
               <li><a href="index.html#hero">home</a></li>
               <li><a href="index.html#about-us">about us</a></li>
               <li><a href="index.html#business">business</a></li>
+              <li><a href="index.html#legal">legality</a></li>
               <li><a href="index.html#footer">contact us</a></li>
             </ul>
           </div>
