--- a/history.html
+++ b/history.html
@@ -120,6 +120,7 @@
                 <li><a href="project.html">Project list</a></li>
               </ul>
             </li>
+            <li><a href="index.html#legal">LEGALITY</a></li>
             <li><a href="#contact-us">CONTACT US</a></li>
           </ul>
         </div>
@@ -172,7 +173,7 @@
           A long history makes <br />
           <span>us stronger</span>
         </h1>
-        <a data-aos="fade-up" href="our-team.html#careers">><button class="tombol btn2">join our team</button></a>
+        <a data-aos="fade-up" href="our-team.html#careers"><button class="tombol btn2">join our team</button></a>
       </div>
     </section>
 
@@ -199,7 +200,7 @@
       <!-- slide partner  -->
       <div class="our_partner" id="our-partner">
         <h1 class="judul_ourpartner text-center">Our Partner</h1>
-        <div class="tagline_ourpartner">Partner who is always solid with us is:</div>
+        <div class="tagline_ourpartner">our loyal client:</div>
         <div class="slider">
           <div class="slide-track">
             <!-- 7 logo -->
@@ -340,7 +341,7 @@
           </div>
         </div>
         <div class="mb-5" id="curtural">
-          <div class="header">CULTURAL</div>
+          <div class="header">COMPLIANCE</div>
           <div class="row">
             <div class="card">
               <h4></h4>
@@ -477,6 +478,7 @@
               <li><a href="index.html#hero">home</a></li>
               <li><a href="index.html#about-us">about us</a></li>
               <li><a href="index.html#business">business</a></li>
+              <li><a href="index.html#legal">legality</a></li>
               <li><a href="index.html#footer">contact us</a></li>
             </ul>
           </div>
