--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <li><a href="project.html">Project list</a></li>
               </ul>
             </li>
+            <li><a href="index.html#legal">LEGALITY</a></li>
             <li><a href="#contact-us">CONTACT US</a></li>
           </ul>
         </div>
@@ -205,7 +206,7 @@
         </div>
         <div class="button-hero">
           <a href="#contact-us" data-aos="fade-down"> <button class="tombol2 btn3">send mail</button></a>
-          <a href="#" data-aos="fade-down"> <button class="tombol btn2">contact sales</button></a>
+          <a href="https://wa.me/+628118306388/?text=Hello" data-aos="fade-down"> <button class="tombol btn2">contact sales</button></a>
         </div>
         <div class="sosmed container" data-aos="fade-up">
           <a href="#"><img class="logo_sosmed" src="img/img/facebook.png" alt="" /></a>
@@ -300,7 +301,7 @@
           <div class="business_button col-md-5" data-aos="fade-up">
             <div class="button-business">
               <a href="#footer"> <button class="tombol btn1">send mail</button></a>
-              <a href="#footer"> <button class="tombol btn2">contact sales</button></a>
+              <a href="https://wa.me/+628118306388/?text=Hello"> <button class="tombol btn2">contact sales</button></a>
             </div>
           </div>
         </div>
@@ -359,7 +360,7 @@
     <!-- ahir business -->
 
     <!-- project -->
-    <section id="projects">
+    <section id="legal">
       <div class="judul_project container">
         <div class="line"></div>
         <div class="container mb-5">
@@ -374,6 +375,10 @@
               PT Yogma Wijaya Kusuma has received several ISO certifications which have made us an international standard company, have a good image in the business community and technically, of course, the production implementation has
               also been better. Errors in the production process can be minimized to the lowest point, so that losses due to technical errors can be reduced drastically.
             </p>
+            <a href="./img/certificate/SBU dan SIUJK terbaru 2022 yang sudah di ttd dan stempel.pdf" download=""> <button class="tombol btn2">SBU & SIUJK</button></a>
+            <a href="./img/certificate/SUIP PT YOGMA WIJAYA KUSUMA.pdf" download=""> <button class="tombol btn2">SUIP</button></a>
+            <a href="./img/certificate/Surat Domisili PT YOGMA WIJAYA KUSUMA.pdf" download=""> <button class="tombol btn2">Company Domicile Letter</button></a>
+            <a href="./img/certificate/TDP PT Yogma Wijaya Kusuma.pdf" download=""> <button class="tombol btn2">TDP PT Yogma Wijaya Kusuma</button></a>
           </div>
           <!-- testimoni slide -->
           <div class="col-md-6">
@@ -444,7 +449,7 @@
     </section>
 
     <!-- project slide -->
-    <div class="title_project_list container" data-aos="fade-down">
+    <div class="title_project_list container" data-aos="fade-down" id="projects">
       <h1>Our Lastest Project</h1>
     </div>
     <div class="swiper mySwiper">
@@ -669,6 +674,7 @@
               <li><a href="index.html#hero">home</a></li>
               <li><a href="index.html#about-us">about us</a></li>
               <li><a href="index.html#business">business</a></li>
+              <li><a href="index.html#legal">legality</a></li>
               <li><a href="index.html#footer">contact us</a></li>
             </ul>
           </div>
