--- a/our-team.html
+++ b/our-team.html
@@ -120,6 +120,7 @@
                 <li><a href="project.html">Project list</a></li>
               </ul>
             </li>
+            <li><a href="index.html#legal">LEGALITY</a></li>
             <li><a href="#contact-us">CONTACT US</a></li>
           </ul>
         </div>
@@ -207,6 +208,7 @@
       <button class="btn" onclick="filterObjects('accounting')">accounting</button>
       <button class="btn" onclick="filterObjects('engineer')">engineer</button>
       <button class="btn" onclick="filterObjects('employe')">employe</button>
+      <a href="#"><button class="btn">our partners</button></a>
     </ul>
 
     <div class="objects swiper">
@@ -893,6 +895,7 @@
               <li><a href="index.html#hero">home</a></li>
               <li><a href="index.html#about-us">about us</a></li>
               <li><a href="index.html#business">business</a></li>
+              <li><a href="index.html#legal">legality</a></li>
               <li><a href="index.html#footer">contact us</a></li>
             </ul>
           </div>
