--- a/project.html
+++ b/project.html
@@ -120,6 +120,7 @@
                 <li><a href="project.html">Project list</a></li>
               </ul>
             </li>
+            <li><a href="index.html#legal">LEGALITY</a></li>
             <li><a href="#contact-us">CONTACT US</a></li>
           </ul>
         </div>
@@ -178,22 +179,27 @@
       <div class="project container">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
           <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="project1-tab" data-bs-toggle="tab" data-bs-target="#project1" type="button" role="tab" aria-controls="project1" aria-selected="true">2001-2006</button>
+            <button class="nav-link active" id="project6-tab" data-bs-toggle="tab" data-bs-target="#project6" type="button" role="tab" aria-controls="project6" aria-selected="false">2018-now</button>
           </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="project2-tab" data-bs-toggle="tab" data-bs-target="#project2" type="button" role="tab" aria-controls="project2" aria-selected="false">2007-2009</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="project3-tab" data-bs-toggle="tab" data-bs-target="#project3" type="button" role="tab" aria-controls="project3" aria-selected="false">2010-2012</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="project4-tab" data-bs-toggle="tab" data-bs-target="#project4" type="button" role="tab" aria-controls="project4" aria-selected="false">2013-2015</button>
-          </li>
+
           <li class="nav-item" role="presentation">
             <button class="nav-link" id="project5-tab" data-bs-toggle="tab" data-bs-target="#project5" type="button" role="tab" aria-controls="project5" aria-selected="false">2016-2017</button>
           </li>
+
           <li class="nav-item" role="presentation">
-            <button class="nav-link" id="project6-tab" data-bs-toggle="tab" data-bs-target="#project6" type="button" role="tab" aria-controls="project6" aria-selected="false">2018-now</button>
+            <button class="nav-link" id="project4-tab" data-bs-toggle="tab" data-bs-target="#project4" type="button" role="tab" aria-controls="project4" aria-selected="false">2013-2015</button>
+          </li>
+
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="project3-tab" data-bs-toggle="tab" data-bs-target="#project3" type="button" role="tab" aria-controls="project3" aria-selected="false">2010-2012</button>
+          </li>
+
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="project2-tab" data-bs-toggle="tab" data-bs-target="#project2" type="button" role="tab" aria-controls="project2" aria-selected="false">2007-2009</button>
+          </li>
+
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="project1-tab" data-bs-toggle="tab" data-bs-target="#project1" type="button" role="tab" aria-controls="project1" aria-selected="true">2001-2006</button>
           </li>
         </ul>
 
@@ -201,7 +207,7 @@
 
         <div class="tab-content mt-4" id="myTabContent">
           <!-- slide 1 -->
-          <div class="tab-pane fade show active" id="project1" role="tabpanel" aria-labelledby="project1-tab">
+          <div class="tab-pane fade" id="project1" role="tabpanel" aria-labelledby="project1-tab">
             <!--  -->
 
             <div class="project-item">
@@ -1760,7 +1766,7 @@
           <!-- silde 5  ahir-->
 
           <!-- silde 6 -->
-          <div class="tab-pane fade" id="project6" role="tabpanel" aria-labelledby="project6-tab">
+          <div class="tab-pane fade show active" id="project6" role="tabpanel" aria-labelledby="project6-tab">
             <!--  -->
 
             <div class="project-item">
@@ -2051,6 +2057,7 @@
               <li><a href="index.html#hero">home</a></li>
               <li><a href="index.html#about-us">about us</a></li>
               <li><a href="index.html#business">business</a></li>
+              <li><a href="index.html#legal">legality</a></li>
               <li><a href="index.html#footer">contact us</a></li>
             </ul>
           </div>
