--- a/how-we-work.html
+++ b/how-we-work.html
@@ -121,6 +121,7 @@
                 <li><a href="project.html">Project list</a></li>
               </ul>
             </li>
+            <li><a href="index.html#legal">LEGALITY</a></li>
             <li><a href="#contact-us">CONTACT US</a></li>
           </ul>
         </div>
@@ -448,6 +449,7 @@
               <li><a href="index.html#hero">home</a></li>
               <li><a href="index.html#about-us">about us</a></li>
               <li><a href="index.html#business">business</a></li>
+              <li><a href="index.html#legal">legality</a></li>
               <li><a href="index.html#footer">contact us</a></li>
             </ul>
           </div>
