--- a/history.html
+++ b/history.html
@@ -137,6 +137,18 @@
           </div>
         </div>
         <!-- button information ahir  -->
+        <div class="iso-info">
+          <div>
+            <div class="logo-iso">
+              <a href=""><img src="img/img/LMS.png" alt="" /></a>
+            </div>
+          </div>
+          <div>
+            <div class="logo-iso">
+              <a href=""><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
+            </div>
+          </div>
+        </div>
         <div class="etc-bar">
           <div class="languange">
             <div class="selected-langange">ENG</div>
@@ -146,7 +158,6 @@
               <li><a class="jpg" href="#">JPN</a></li>
             </ul>
           </div>
-
           <div>
             <a class="buttoninformation" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
               <span class="buttoninformation__icon">
@@ -163,7 +174,6 @@
         </div>
       </div>
     </nav>
-
     <!-- Ahir navbar -->
 
     <!-- hero section -->
