--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@
           </div>
         </div>
         <!-- button information ahir  -->
+        <div class="iso-info">
+          <div>
+            <div class="logo-iso">
+              <a href=""><img src="img/img/LMS.png" alt="" /></a>
+            </div>
+          </div>
+          <div>
+            <div class="logo-iso">
+              <a href=""><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
+            </div>
+          </div>
+        </div>
         <div class="etc-bar">
           <div class="languange">
             <div class="selected-langange">ENG</div>
@@ -154,7 +166,6 @@
               <li><a class="jpg" href="#">JPN</a></li>
             </ul>
           </div>
-
           <div>
             <a class="buttoninformation" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
               <span class="buttoninformation__icon">
@@ -273,7 +284,7 @@
         <div class="mission">
           <img src="img/img/icon misi.png" alt="" data-aos="fade-down" />
           <div class="content" data-aos="fade-up">
-            <h1>MISIION</h1>
+            <h1>MISSION</h1>
             <p>
               Always maintain a commitment to provide customer satisfaction with the attention to quality the right price and the right time job on every project that was done , as well as providing employment opportunities to the human
               resource potential.
@@ -369,7 +380,7 @@
       </div>
       <div class="container mt-5">
         <div class="row justify-content-between">
-          <div class="judul_testimonial col-md-5" data-aos="fade-up">
+          <div class="judul_testimonial" data-aos="fade-up">
             <h1>Certificate & Legalization</h1>
             <p>
               PT Yogma Wijaya Kusuma has received several ISO certifications which have made us an international standard company, have a good image in the business community and technically, of course, the production implementation has
@@ -381,7 +392,7 @@
             <a href="./img/certificate/TDP PT Yogma Wijaya Kusuma.pdf" download=""> <button class="tombol btn2">TDP PT Yogma Wijaya Kusuma</button></a>
           </div>
           <!-- testimoni slide -->
-          <div class="col-md-6">
+          <div class="">
             <div class="testimoni_card">
               <!-- testimony card -->
               <div class="card-testimoni">
@@ -426,6 +437,12 @@
                   <a href="./img/certificate/ISO 37001-2016.pdf" download=""> <button class="tombol btn2">certificate</button></a>
                 </div>
               </div>
+
+              <!-- testimony card -->
+            </div>
+
+            <div class="testimoni_card">
+              <!-- testimony card -->
               <div class="card-testimoni">
                 <div class="left_content">
                   <div class="overlay"></div>
@@ -438,6 +455,67 @@
                   <h5 class="jabatan">ISO 9001 : 2015</h5>
                   <p class="description">"provison of general contractor, mechanical and electrical....</p>
                   <a href="./img/certificate/9001-2015.jpg" download=""> <button class="tombol btn2">certificate</button></a>
+                </div>
+              </div>
+              <div class="card-testimoni">
+                <div class="left_content">
+                  <div class="overlay"></div>
+                  <div class="profil-image">
+                    <img src="" alt="" class="Photo" />
+                  </div>
+                </div>
+                <div class="right_content">
+                  <h2 class="name">SBU & SIUJK</h2>
+                  <h5 class="jabatan">2022</h5>
+                  <p class="description">business license to support business activities from a construction business entity certificate (SBU)</p>
+                  <a href="./img/certificate/SBU dan SIUJK terbaru 2022 yang sudah di ttd dan stempel.pdf" download=""> <button class="tombol btn2">certificate</button></a>
+                </div>
+              </div>
+              <div class="card-testimoni">
+                <div class="left_content">
+                  <div class="overlay"></div>
+                  <div class="profil-image">
+                    <img src="" alt="" class="Photo" />
+                  </div>
+                </div>
+                <div class="right_content">
+                  <h2 class="name">SUIP</h2>
+                  <h5 class="jabatan">code KBLI: 46599,46900</h5>
+                  <p class="description">business license (Trade Business License)</p>
+                  <a href="./img/certificate/SUIP PT YOGMA WIJAYA KUSUMA.pdf" download=""> <button class="tombol btn2">certificate</button></a>
+                </div>
+              </div>
+
+              <!-- testimony card -->
+            </div>
+            <div class="testimoni_card">
+              <!-- testimony card -->
+              <div class="card-testimoni">
+                <div class="left_content">
+                  <div class="overlay"></div>
+                  <div class="profil-image">
+                    <img src="" alt="" class="Photo" />
+                  </div>
+                </div>
+                <div class="right_content">
+                  <h2 class="name">DOMICILE OF BUSINESS</h2>
+                  <h5 class="jabatan">503/400/VII/2021</h5>
+                  <p class="description">pemerintah kabupaten bekasi kecamatan tambun selatan</p>
+                  <a href="./img/certificate/Surat Domisili PT YOGMA WIJAYA KUSUMA.pdf" download=""> <button class="tombol btn2">certificate</button></a>
+                </div>
+              </div>
+              <div class="card-testimoni">
+                <div class="left_content">
+                  <div class="overlay"></div>
+                  <div class="profil-image">
+                    <img src="" alt="" class="Photo" />
+                  </div>
+                </div>
+                <div class="right_content">
+                  <h2 class="name">TDP</h2>
+                  <h5 class="jabatan">No TDP: 100714610923</h5>
+                  <p class="description">pemerintah kabupaten bekasi badan penanaman modal dan pelayanan perizinan terpadu</p>
+                  <a href="./img/certificate/TDP PT Yogma Wijaya Kusuma.pdf" download=""> <button class="tombol btn2">certificate</button></a>
                 </div>
               </div>
 
