--- a/history.html
+++ b/history.html
@@ -140,12 +140,12 @@
         <div class="iso-info">
           <div>
             <div class="logo-iso">
-              <a href=""><img src="img/img/LMS.png" alt="" /></a>
+              <a href="index.html#legal"><img src="img/img/LMS.png" alt="" /></a>
             </div>
           </div>
           <div>
             <div class="logo-iso">
-              <a href=""><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
+              <a href="index.html#legal"><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -174,6 +174,7 @@
         </div>
       </div>
     </nav>
+
     <!-- Ahir navbar -->
 
     <!-- hero section -->
