--- a/project.html
+++ b/project.html
@@ -51,6 +51,7 @@
       <div class="spinner"></div>
     </div>
     <!-- navbar -->
+
     <nav>
       <div class="navbar" id="navbar">
         <i class="bx bx-menu"></i>
@@ -140,12 +141,12 @@
         <div class="iso-info">
           <div>
             <div class="logo-iso">
-              <a href=""><img src="img/img/LMS.png" alt="" /></a>
+              <a href="index.html#legal"><img src="img/img/LMS.png" alt="" /></a>
             </div>
           </div>
           <div>
             <div class="logo-iso">
-              <a href=""><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
+              <a href="index.html#legal"><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -174,6 +175,7 @@
         </div>
       </div>
     </nav>
+
     <!-- Ahir navbar -->
 
     <!-- hero section -->
