--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
         <div class="iso-info">
           <div>
             <div class="logo-iso">
-              <a href=""><img src="img/img/LMS.png" alt="" /></a>
+              <a href="index.html#legal"><img src="img/img/LMS.png" alt="" /></a>
             </div>
           </div>
           <div>
             <div class="logo-iso">
-              <a href=""><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
+              <a href="index.html#legal"><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
             </div>
           </div>
         </div>
