--- a/our-service.html
+++ b/our-service.html
@@ -141,12 +141,12 @@
         <div class="iso-info">
           <div>
             <div class="logo-iso">
-              <a href=""><img src="img/img/LMS.png" alt="" /></a>
+              <a href="index.html#legal"><img src="img/img/LMS.png" alt="" /></a>
             </div>
           </div>
           <div>
             <div class="logo-iso">
-              <a href=""><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
+              <a href="index.html#legal"><img src="img/img/LOGO-KIS-CIRCLE-01.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -175,6 +175,7 @@
         </div>
       </div>
     </nav>
+
     <!-- Ahir navbar -->
 
     <!-- hero section -->
