update foto tag 1

--- a/project-TEL.html
+++ b/project-TEL.html
@@ -447,13 +447,66 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide"><video src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/TEST.mp4" controls></video></div>
-          <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/1.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/2.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/3.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/4.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/5.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/6.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/7.jpg" alt="" /></div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-01.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-02.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-03.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-04.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-05.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-05.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-06.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-07.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-08.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-09.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-10.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-11.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-12.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-13.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-14.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-15.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-16.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-17.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-18.jpg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2022-PARTIALLY REPLACEMENT EXISTING ASPHALT & BASE COURSE WITH NEW BASECOURSE 200 THICKNES/untitle-19.jpg" alt="" />
+          </div>
         </div>
         <div class="swiper-button-next swiper-navBtn"></div>
         <div class="swiper-button-prev swiper-navBtn"></div>
